tests/samples/positive/control_flow/else_if.ax
module else_if;

extern c {
    @name("puts")
    fn puts(s: *const u8) -> i32;
}

fn classify(value: i32) -> i32 {
    if value < 0 {
        return -1;
    } else if value == 0 {
        return 0;
    } else {
        return 1;
    }
}

fn main() -> i32 {
    if classify(-4) == -1 && classify(0) == 0 && classify(9) == 1 {
        puts(c"else if ok");
        return 0;
    }
    puts(c"else if failed");
    return 1;
}
